user registration and database entry

--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    tools:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
+    tools:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar">
 
 </android.support.v7.widget.Toolbar>
