--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -38,7 +38,7 @@
 
     <Button
         android:id="@+id/settings_status_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="148dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -70,18 +70,18 @@
 
     <TextView
         android:id="@+id/settings_status"
-        android:layout_width="232dp"
-        android:layout_height="wrap_content"
+        android:layout_width="291dp"
+        android:layout_height="22dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
         android:text="@string/hi_there_i_m_using_chatapp"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_display_name" />
 
